--- a/src/components/widgets/Widget.css
+++ b/src/components/widgets/Widget.css
@@ -1,3 +1,17 @@
-.widget-content * {
-    width: 100%
+.widget-hover{
+    border: solid red 2px;
+}
+
+.widget-container{
+    padding: 1px;
+}
+
+.widget-container{
+    width: 100%;
+    height:100%;
+}
+
+.widget-container *{
+    width: 100%;
+    height:100%;
 }
