--- a/src/components/DashboardPage/DashboardPage.css
+++ b/src/components/DashboardPage/DashboardPage.css
@@ -8,5 +8,11 @@
 
 .dashboard-page-nav{
     position: absolute; 
-    top:0
+    top:0;
+    z-index:100;
+}
+
+.canvas-container{
+    width: 100%;
+    height:100%;
 }
