--- a/src/components/widgets/WidgetContainer/WidgetContainer.css
+++ b/src/components/widgets/WidgetContainer/WidgetContainer.css
@@ -3,12 +3,13 @@
 }
 
 .widget-container{
+    width: 100%;
+    height:100%;
     padding: 1px;
 }
 
-.widget-container{
-    width: 100%;
-    height:100%;
+.react-draggable{
+    z-index: 30;
 }
 
 .widget-container *{
