--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -3,7 +3,10 @@
 }
 
 .demo-canvas-container .dashboard-canvas{
-    height:500px;
+    height:400px;
+    border: 5px solid grey;
+    text-shadow: 0 2px #fff;
+    text-align: center;
 }
 
 .landing-container{
@@ -35,4 +38,38 @@
 .landing-unauth-navbar .light-text-button{
     margin: 0px 5px 0px 5px;
     color:white
+}
+
+.landing-demo-section{
+    background-image: linear-gradient(to bottom right, #00002A,#333333);
+}
+.demo-canvas-info{
+    padding-top:50px;
+}
+
+.demo-button-container{
+    width: 100%;
+}
+
+.demo-canvas-container{
+    padding: 50px 50px 50px 0px;
+}
+
+.demo-description{
+    color:white
+}
+
+.demo-description-container{
+    margin:20px 40px 20px 40px;
+}
+
+.landing-demo-header-container{
+    margin:0;
+    width:100%;
+    color:white;
+    padding-top:60px;
+}
+
+.landing-container .landing-unauth-navbar a{
+    color:white;
 }
