--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -104,3 +104,8 @@
 .card-image-container img{
     max-width:50px;
 }
+
+.demo-canvas-info .demo-button-container .btn-group .active{
+    background-color: orange;
+    border-color: orange;
+}
