--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -109,3 +109,8 @@
     background-color: orange;
     border-color: orange;
 }
+
+.landing-features .card-deck .card{
+    border-color: #000035;
+    border-radius: 10px;
+}
