--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -117,3 +117,34 @@
     border-color: #000035;
     border-radius: 10px;
 }
+
+.landing-get-started{
+    background: #F2F2F2;
+    margin: 0;
+    padding: 0;
+    max-width: 100%;
+    width: 100%;
+    padding-bottom: 40px;
+}
+
+.landing-get-started h1{
+    padding-top: 40px;
+    padding-bottom: 20px;
+    color: black;
+}
+
+.whiteboard-header{
+    font-family: 'Schoolbell', arial, serif; 
+}
+
+.get-started-container{
+    padding-top: 150px;
+    padding-bottom:100px;
+}
+
+.get-started-popup{
+    background: white;
+    padding: 40px 80px 40px 80px ;
+    box-shadow: 2px 2px 10px;
+    border-radius: 20px;
+}
