--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -140,6 +140,8 @@
 .get-started-container{
     padding-top: 150px;
     padding-bottom:100px;
+    margin-left:5%;
+    margin-right:5%;
 }
 
 .get-started-popup{
