--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -109,8 +109,8 @@
 }
 
 .demo-canvas-info .demo-button-container .btn-group .active{
-    background-color: orange;
-    border-color: orange;
+    background-color: rgb(250, 206, 141);
+    border-color: rgb(250, 206, 141);
 }
 
 .landing-features .card-deck .card{
